More Junit5 improvements