@@ -221,11 +221,24 @@
 				<configuration>
 					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
 					<argLine>
-						--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
-						--add-opens=java.base/java.util=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.node=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.product=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.resource=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.task=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.task.chain=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.about=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.guide=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.product=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.settings=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.task=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.welcom=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.transaction=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.util=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.workarea=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.workspace=ALL-UNNAMED
 					</argLine>
 					<systemPropertyVariables>
 						<!-- Set testfx.setup.timeout to a reasonable time -->
@@ -285,10 +298,8 @@
 									<runOrder>alphabetical</runOrder>
 									<argLine>
 										-Xmx128m
-										--add-opens=java.base/java.util=ALL-UNNAMED
 										--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 										--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-										--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 									</argLine>
 									<systemPropertyVariables>
 										<!-- Set testfx.setup.timeout to a reasonable time -->
